<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp" 
    >
    <!-- android:textAppearance="@style/profil_colorPolice" -->

    
    <TextView
        android:id="@+id/textView_titre_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Profil"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="@style/salon_nomSalon" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingLeft="20dp" >

        <TextView
            android:id="@+id/pseudo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/profil_pseudo"
            android:textAppearance="@style/profil_champ" />

        <TextView
            android:id="@+id/champPseudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:text=""
            android:textSize="16dp"
            android:textAppearance="@style/profil_champ" />

        <TextView
            android:id="@+id/nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/profil_nom"
            android:textAppearance="@style/profil_champ" />

        <TextView
            android:id="@+id/champNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:text=""
            android:textSize="16dp"
            android:textAppearance="@style/profil_champ" />

        <TextView
            android:id="@+id/prenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/profil_prenom"
            android:textAppearance="@style/profil_champ" />

        <TextView
            android:id="@+id/champPrenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:text=""
            android:textSize="16dp"
            android:textAppearance="@style/profil_champ" />

        <TextView
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/profil_mail"
            android:textAppearance="@style/profil_champ" />

        <TextView
            android:id="@+id/champMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:text=""
            android:textSize="16dp"
            android:textAppearance="@style/profil_champ" />
    </LinearLayout>

</RelativeLayout>